--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://ezan.mymeriva.com/cgi-bin/next.php',
+        url: 'https://submit-form.com/9rGf4xbL5',
         type: 'POST',
         data:{
           email:email,
