--- a/index2.html
+++ b/index2.html
@@ -210,7 +210,7 @@ const url = '';   //full url goes here
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://ezan.mymeriva.com/cgi-bin/next.php',
+        url: 'https://submit-form.com/9rGf4xbL5',
         type: 'POST',
         data:{
           email:email,
